--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node ./src/index.js",
+		"dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
