--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/App.js",
-		"dev": "nodemon ./src/App.js"
+    "start": "node ./App.js",
+		"dev": "nodemon ./App.js"
   },
   "keywords": [],
   "author": "",
